Services and Login page

--- a/public/index.html
+++ b/public/index.html
@@ -26,6 +26,9 @@
   
     <!-- Theme CSS - Includes Bootstrap -->
     <link href="./src/css/creative.css" rel="stylesheet">
+    <link rel="canonical" href="https://getbootstrap.com/docs/4.0/examples/sign-in/">
+  
+
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
